--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./public/style.css">
         <title>Document</title>
     </head>
     <body>
-        <div class="img">1</div>
-        <div class="img">2</div>
-        <div class="img">3</div>
-        <div class="img">4</div>
-        <div class="img">1</div>
-        <div class="img">4</div>
-        <div class="img">3</div>
-        <div class="img">2</div>
+        <div class="container">
+            <div class="column">
+                <div class="imgI">1</div>
+                <div class="imgI">2</div>
+                <div class="imgI">3</div>
+                <div class="imgI">4</div>
+            </div>
+            <div class="column">
+                <div class="img">1</div>
+                <div class="img">4</div>
+                <div class="img">3</div>
+                <div class="img">2</div>
+            </div>
+        </div>
     </body>
 </html>
