--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./public/style.css">
-        <title>Document</title>
+        <title>Cositas Locas</title>
     </head>
     <body>
         <div class="container">
             <div class="column">
-                <div class="imgI">1</div>
-                <div class="imgI">2</div>
-                <div class="imgI">3</div>
-                <div class="imgI">4</div>
+                <div class="img" id="1">1</div>
+                <div class="img" id="2">2</div>
+                <div class="img" id="3">3</div>
+                <div class="img" id="4">4</div>
             </div>
             <div class="column">
-                <div class="img">1</div>
-                <div class="img">4</div>
-                <div class="img">3</div>
-                <div class="img">2</div>
+                <div class="img" id="5">1</div>
+                <div class="img" id="6">4</div>
+                <div class="img" id="7">3</div>
+                <div class="img" id="8">2</div>
             </div>
         </div>
     </body>
+    <script src="./script.js"></script>
 </html>
