Hacemos el If de comparacion de id's

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <body>
         <div class="container">
             <div class="column">
-                <div class="img" id="1">1</div>
-                <div class="img" id="2">2</div>
-                <div class="img" id="3">3</div>
-                <div class="img" id="4">4</div>
+                <div class="img" id="jarra">1</div>
+                <div class="img" id="collar">2</div>
+                <div class="img" id="lapiz">3</div>
+                <div class="img" id="manzana">4</div>
             </div>
             <div class="column">
-                <div class="img" id="5">1</div>
-                <div class="img" id="6">4</div>
-                <div class="img" id="7">3</div>
-                <div class="img" id="8">2</div>
+                <div class="imgD" id="jarra">11</div>
+                <div class="imgD" id="collar">22</div>
+                <div class="imgD" id="lapiz">33</div>
+                <div class="imgD" id="manzana">44</div>
             </div>
         </div>
     </body>
