Hicimos el contador con julian

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="./public/style.css">
         <title>Cositas Locas</title>
     </head>
-    <body>
+    <body>    
         <div class="container">
+            <div class="contadorIgual">Clics Iguales: 0</div>
+            <div class="contadorIncorrecto">Clics incorrectos: 0</div>
             <div class="column">
                 <div class="img" id="jarra">1</div>
                 <div class="img" id="collar">2</div>
