--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
             <div class="contadorIgual">Clics Iguales: 0</div>
             <div class="contadorIncorrecto">Clics incorrectos: 0</div>
             <div class="column">
-                <div class="img" id="jarra">1</div>
-                <div class="img" id="collar">2</div>
-                <div class="img" id="lapiz">3</div>
-                <div class="img" id="manzana">4</div>
+                <div class="Cuadrado" value="0" img="" ></div>
+                <div class="Cuadrado" value="0" img="" ></div>
+                <div class="Cuadrado" value="0" img="" ></div>
+                <div class="Cuadrado" value="0" img="" ></div>
             </div>
+            <button class="mesclador" id="mesclador">Mezclar</button>
             <div class="column">
-                <div class="imgD" id="jarra">11</div>
-                <div class="imgD" id="collar">22</div>
-                <div class="imgD" id="lapiz">33</div>
-                <div class="imgD" id="manzana">44</div>
+                <div class="CuadradoD" value="0" img="" ></div>
+                <div class="CuadradoD" value="0" img="" ></div>
+                <div class="CuadradoD" value="0" img="" ></div>
+                <div class="CuadradoD" value="0" img="" ></div>
             </div>
         </div>
     </body>
