--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <div class="Cuadrado" value="0" img="" ></div>
                     <div class="Cuadrado" value="0" img="" ></div>
                 </div>
-                <div class="contadorIgual">Clics Iguales: 0</div>
+                <div class="contadorIgual">Aciertos: 0</div>
                 <button class="mesclador" id="mesclador">Mezclar</button>
-                <div class="contadorIncorrecto">Clics incorrectos: 0</div>
+                <div class="contadorIncorrecto">Errores: 0</div>
                 <div class="column">
                     <div class="CuadradoD" value="0" img="" ></div>
                     <div class="CuadradoD" value="0" img="" ></div>
