mejore muchoi el codigo a estas horitas, estoy detonado xD

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 </div>
                 <div class="contadorIgual">Aciertos: 0</div>
                 <button class="mesclador" id="mesclador">Mezclar</button>
+                <button class="reiniciar" id="reiniciar" style="display: none;">reiniciar</button>
                 <div class="contadorIncorrecto">Errores: 0</div>
                 <div class="column">
                     <div class="CuadradoD" value="0" img="" ></div>
